# test-task-product-api

./: .gitignore  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 538f964bf3e8_удалено_поле_с_датой_добавления_продукта.py  b33b3042e84a_добавлено_каскадное_удаление_продуктов_.py  e460691a55ff_добавлено_поле_с_датой_добавления_.py
api/: main.py  models.py  security.py  types.py  views.py
