[tool.poetry]
name = "test-task-api"
version = "1.0.0"
description = "Тестовое задание на создание REST API"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standart"], version = "^0.112.2"}
SQLAlchemy = "^2.0.34"
alembic = "^1.13.2"
bcrypt = "^4.2.0"
uvicorn = "^0.30.6"
python-multipart = "^0.0.9"

[tool.poetry.scripts]
start = "api.main:start"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
